--- a/index.html
+++ b/index.html
@@ -29,8 +29,15 @@
 
         <!-- for created notes -->
         <ul id="notes__task">
-            <!-- <li class="old">
-                <div class="background"></div>
+            <!-- <li class="old"> -->
+                <!-- delete request -->
+       <!-- <div class="delte_request">
+          <p>Are you sure you want to Delete this note?</p>
+          <button id="dont">No</button>
+          <button id="doit">Yes</button> -->
+       <!-- </div> -->
+    <!-- close delete request -->
+                <!-- <div class="background"></div>
                 <div class="title__dltbtn">
                     <ul class="new">
                         <li>edit</li>
@@ -50,13 +57,7 @@
 
     </div>
 
-    <!-- delete request -->
-       <div class="delte_request">
-          <p>Are you sure you want to Delete this note?</p>
-          <button id="dont">No</button>
-          <button id="doit">Yes</button>
-       </div>
-    <!-- close delete request -->
+    
 
     <!-- to add notes container -->
      <div class="containe_task_add">
