--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
             </li>     -->
         </ul>
-
+         <div class="link_code"><a href="https://github.com/Mamesha3/Note-APP">See Code Here</a></div>
     </div>
 
     
